--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -9,22 +8,27 @@
   <!-- Facebook Pixel -->
   <script>
     !function(f,b,e,v,n,t,s){
-      if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(f.fbq)return;n=f.fbq=function(){n.callMethod ?
+      n.callMethod.apply(n,arguments) : n.queue.push(arguments)};
       if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
       n.queue=[];t=b.createElement(e);t.async=!0;
       t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
+      s.parentNode.insertBefore(t,s)
+    }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+
     fbq('init', '3153750001397422');
     fbq('track', 'PageView');
-    setTimeout(function() {
-      fbq('trackCustom', 'ViewContent_ai5_7s');
-    }, 7000);
+
+    window.addEventListener('load', function () {
+      setTimeout(function () {
+        fbq('trackCustom', 'ViewContent_ai5_7s');
+      }, 7000);
+    });
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=3153750001397422&ev=PageView&noscript=1"
-  /></noscript>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=3153750001397422&ev=PageView&noscript=1" />
+  </noscript>
   <!-- End Facebook Pixel -->
 
   <style>
@@ -56,10 +60,9 @@
       margin: 20px 0;
       text-align: center;
     }
-    iframe {
+    video {
       width: 100%;
-      height: 320px;
-      border: none;
+      height: auto;
       border-radius: 12px;
     }
     ul {
@@ -102,12 +105,10 @@
     </div>
 
     <div class="video-wrapper">
-      <div style="padding:56.25% 0 0 0;position:relative;">
-        <iframe src="https://player.vimeo.com/video/1106461935?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-                frameborder="0" allow="autoplay; fullscreen; picture-in-picture"
-                style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                title="GPT в деле: Старт мини-курса"></iframe>
-      </div>
+      <video controls autoplay muted playsinline poster="Course%20cover%20pix.png">
+        <source src="AIcourseStart.mp4" type="video/mp4">
+        Ваш браузер не поддерживает видео.
+      </video>
     </div>
 
     <h2>Что вы узнаете:</h2>
