--- a/index.html
+++ b/index.html
@@ -18,26 +18,6 @@
 
     fbq('init', '3153750001397422');
     fbq('track', 'PageView');
-
-    window.addEventListener('load', function () {
-      // событие ViewContent через 7 секунд
-      setTimeout(function () {
-        fbq('trackCustom', 'ViewContent_ai5_7s');
-      }, 7000);
-
-      // отложенный автозапуск видео через 6 секунд
-      setTimeout(function () {
-        const video = document.getElementById('course-video');
-        if (video && video.paused) {
-          const playPromise = video.play();
-          if (playPromise !== undefined) {
-            playPromise.catch(function(error) {
-              console.log("Autoplay prevented:", error);
-            });
-          }
-        }
-      }, 6000);
-    });
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
@@ -73,11 +53,26 @@
     .video-wrapper {
       margin: 20px 0;
       text-align: center;
+      position: relative;
     }
     video {
       width: 100%;
       height: auto;
       border-radius: 12px;
+    }
+    #unmute-btn {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      z-index: 10;
+      background: rgba(0,0,0,0.7);
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      padding: 10px 14px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      display: none;
     }
     ul {
       padding-left: 1.2em;
@@ -123,6 +118,7 @@
         <source src="AIcourseStart.mp4" type="video/mp4">
         Ваш браузер не поддерживает видео.
       </video>
+      <button id="unmute-btn" onclick="unmuteVideo()">🔊 Включить звук</button>
     </div>
 
     <h2>Что вы узнаете:</h2>
@@ -146,5 +142,53 @@
       </a>
     </div>
   </div>
+
+  <script>
+    window.addEventListener('load', function () {
+      const video = document.getElementById('course-video');
+      const btn = document.getElementById('unmute-btn');
+
+      // Событие Facebook через 7 секунд
+      setTimeout(function () {
+        fbq('trackCustom', 'ViewContent_ai5_7s');
+      }, 7000);
+
+      // Показать кнопку включения звука через 3 секунды
+      setTimeout(function () {
+        if (btn) btn.style.display = 'block';
+      }, 3000);
+
+      // Автовоспроизведение видео без звука через 6 секунд
+      setTimeout(function () {
+        if (video && video.paused) {
+          const playPromise = video.play();
+          if (playPromise !== undefined) {
+            playPromise.catch(function (error) {
+              console.log("Autoplay prevented:", error);
+            });
+          }
+        }
+
+        // Удаляем кнопку, если пользователь включает звук вручную
+        if (video) {
+          video.addEventListener('volumechange', function () {
+            if (!video.muted) {
+              btn.style.display = 'none';
+            }
+          });
+        }
+      }, 6000);
+    });
+
+    function unmuteVideo() {
+      const video = document.getElementById('course-video');
+      const btn = document.getElementById('unmute-btn');
+      if (video) {
+        video.muted = false;
+        video.play();
+        if (btn) btn.style.display = 'none';
+      }
+    }
+  </script>
 </body>
 </html>
