--- a/index.html
+++ b/index.html
@@ -1,293 +1,80 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GPT в деле: мини-курс</title>
+<script>
+  // --- 7s ViewContent marker ---
+  setTimeout(function(){
+    fbq('trackCustom','ViewContent_ai5_7s');
+  },7000);
 
-  <!-- Facebook Pixel -->
-  <script>
-    !function(f,b,e,v,n,t,s){
-      if(f.fbq)return;n=f.fbq=function(){n.callMethod ?
-      n.callMethod.apply(n,arguments) : n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)
-    }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+  // --- Video helpers ---
+  window.addEventListener('load', function () {
+    const video = document.getElementById('course-video');
+    const btn = document.getElementById('unmute-btn');
 
-    fbq('init', '3153750001397422');
-    fbq('track', 'PageView');
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=3153750001397422&ev=PageView&noscript=1" />
-  </noscript>
-  <!-- End Facebook Pixel -->
+    setTimeout(function(){ if(btn) btn.style.display='block'; },3000);
 
-  <style>
-    :root{
-      --blue:#3aa0d1;
-      --blue-dark:#2a8ab7;
-      --bg:#f4f4f4;
-      --text:#222;
-    }
-    *{box-sizing:border-box}
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-    }
-    .container {
-      max-width: 720px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-    }
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.5em;
-    }
-    .subtitle {
-      font-size: 1.1rem;
-      color: #555;
-      margin-bottom: 1.5em;
-    }
-    .video-wrapper {
-      margin: 20px 0;
-      text-align: center;
-      position: relative;
-    }
-    video {
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-    }
-    #unmute-btn {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      z-index: 10;
-      background: rgba(0,0,0,0.7);
-      color: #fff;
-      border: none;
-      border-radius: 6px;
-      padding: 10px 14px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      display: none;
-    }
-    ul { padding-left: 1.2em; }
-    li { margin-bottom: 0.7em; }
-
-    /* PRICE BLOCK */
-    .offer{
-      margin-top:24px;
-      background:#e7f7ff;
-      border:1px solid #d1eefc;
-      border-radius:12px;
-      padding:18px;
-      display:flex;
-      align-items:center;
-      gap:18px;
-      flex-wrap:wrap;
-    }
-    .price{
-      display:flex;
-      align-items:baseline;
-      gap:10px;
-    }
-    .price-old{
-      color:#888;
-      text-decoration:line-through;
-      font-size:1.1rem;
-    }
-    .price-new{
-      color:#0b6ea8;
-      font-weight:700;
-      font-size:1.6rem;
-      background:#ffffffb3;
-      padding:4px 10px;
-      border-radius:8px;
-    }
-    .badge{
-      background:#0bbf77;
-      color:#fff;
-      font-weight:600;
-      padding:4px 10px;
-      border-radius:999px;
-      font-size:0.9rem;
-    }
-    .timer{
-      margin-left:auto;
-      font-variant-numeric:tabular-nums;
-      font-weight:700;
-      color:#0b6ea8;
-      display:flex;
-      align-items:center;
-      gap:8px;
-    }
-    .timer small{display:block;color:#2f6f8e;font-weight:500}
-    .cta {
-      margin-top: 18px;
-      text-align: center;
-    }
-    .cta a {
-      background: var(--blue);
-      color: #fff;
-      text-decoration: none;
-      padding: 14px 28px;
-      border-radius: 8px;
-      font-size: 1rem;
-      display: inline-block;
-      transition: background .3s, transform .05s;
-    }
-    .cta a:hover { background: var(--blue-dark); }
-    .cta a:active { transform: translateY(1px); }
-
-    .bonus {
-      background: #eefbf4;
-      border-left: 4px solid #0bbf77;
-      padding: 16px;
-      margin-top: 1.5em;
-      border-radius: 12px;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>GPT в деле: как запустить ИИ-ассистента и заработать на нём</h1>
-    <div class="subtitle">
-      Мини-курс для тех, кто хочет меньше рутинить, больше зарабатывать — и начать применять ИИ в своём бизнесе уже завтра. Без технарщины и лишней воды.
-    </div>
-
-    <div class="video-wrapper">
-      <video id="course-video" controls muted playsinline poster="Course%20cover%20pix.png">
-        <source src="AIcourseStart.mp4" type="video/mp4">
-        Ваш браузер не поддерживает видео.
-      </video>
-      <button id="unmute-btn" onclick="unmuteVideo()">🔊 Включить звук</button>
-    </div>
-
-    <!-- OFFER / PRICE + TIMER -->
-    <div class="offer" id="offer">
-      <div class="price">
-        <!-- Во время акции показываем 14,90 -> 8,90 (−40%) -->
-        <span class="price-old" id="price-old">14,90 €</span>
-        <span class="price-new" id="price-new">8,90 €</span>
-        <span class="badge" id="badge">−40%</span>
-      </div>
-      <div class="timer" id="timer">
-        ⏳ <span id="timeleft">48:00:00</span>
-        <small>до конца акции</small>
-      </div>
-    </div>
-
-    <h2>Что вы узнаете:</h2>
-    <ul>
-      <li>⚙️ 5 реальных сценариев, где ИИ-ассистент заменяет помощника, копирайтера или маркетолога</li>
-      <li>📄 Промпты, которые сэкономят часы работы и ускорят запуск задач</li>
-      <li>🧠 Метод внедрения GPT без программирования и сложных настроек</li>
-    </ul>
-
-    <div class="bonus">
-      <strong>🎁 Бонусы к курсу:</strong>
-      <ul>
-        <li>🧭 Доступ к <strong>Обогатителю</strong> — ассистенту, который поможет найти и запустить микробизнес под ваши навыки и гео</li>
-        <li>📥 PDF «5 воронок в законе» — готовые автоворонки для Telegram, WhatsApp и Instagram</li>
-      </ul>
-    </div>
-
-    <div class="cta">
-      <!-- По умолчанию (акция активна) ведём на 8,90 € -->
-      <a id="cta-btn" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07" onclick="fbq('trackCustom','Checkout_ai5')">
-        Получить доступ за 8,90&nbsp;€
-      </a>
-    </div>
-  </div>
-
-  <script>
-    // --- 7s ViewContent marker ---
     setTimeout(function(){
-      fbq('trackCustom','ViewContent_ai5_7s');
-    },7000);
-
-    // --- Video helpers ---
-    window.addEventListener('load', function () {
-      const video = document.getElementById('course-video');
-      const btn = document.getElementById('unmute-btn');
-
-      setTimeout(function(){ if(btn) btn.style.display='block'; },3000);
-
-      setTimeout(function(){
-        if (video && video.paused) {
-          const p = video.play();
-          if (p && p.catch) p.catch(()=>{});
-        }
-        if (video) {
-          video.addEventListener('volumechange', function () {
-            if (!video.muted && btn) btn.style.display = 'none';
-          });
-        }
-      },6000);
-    });
-
-    function unmuteVideo(){
-      const v=document.getElementById('course-video');
-      const b=document.getElementById('unmute-btn');
-      if(!v) return;
-      v.muted=false; v.play();
-      if(b) b.style.display='none';
-    }
-
-    // --- Countdown (48h per user) ---
-    (function(){
-      const KEY='ai5_offer_deadline_v1';
-      const HOURS=48; // длительность акции для пользователя
-      const ALT_LINK_AFTER_EXPIRY = "https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08"; // линк на 14,90 €
-      const BASE_PRICE_LABEL = 'Получить доступ за 14,90 €';
-
-      const now = Date.now();
-      let deadline = localStorage.getItem(KEY);
-      if(!deadline){
-        deadline = (now + HOURS*60*60*1000).toString();
-        localStorage.setItem(KEY, deadline);
+      if (video && video.paused) {
+        const p = video.play();
+        if (p && p.catch) p.catch(()=>{});
       }
-      deadline = parseInt(deadline,10);
+      if (video) {
+        video.addEventListener('volumechange', function () {
+          if (!video.muted && btn) btn.style.display = 'none';
+        });
+      }
+    },6000);
+  });
 
-      const $timer = document.getElementById('timeleft');
-      const $timerWrap = document.getElementById('timer');
-      const $old = document.getElementById('price-old');
-      const $new = document.getElementById('price-new');
-      const $badge = document.getElementById('badge');
-      const $cta = document.getElementById('cta-btn');
+  function unmuteVideo(){
+    const v=document.getElementById('course-video');
+    const b=document.getElementById('unmute-btn');
+    if(!v) return;
+    v.muted=false; v.play();
+    if(b) b.style.display='none';
+  }
 
-      let expiredSent = false;
+  // --- Countdown (48h per user) ---
+  (function(){
+    const KEY='ai5_offer_deadline_v1';
+    const HOURS=48; // длительность акции для пользователя
+    const ALT_LINK_AFTER_EXPIRY = "https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08"; // линк на 14,90 €
+    const BASE_PRICE_LABEL = 'Получить доступ за 14,90 €';
 
-      function pad(n){ return n<10?('0'+n):n; }
-      function render(){
-        const diff = deadline - Date.now();
-        if(diff <= 0){
+    const now = Date.now();
+    let deadline = localStorage.getItem(KEY);
+    if(!deadline){
+      deadline = (now + HOURS*60*60*1000).toString();
+      localStorage.setItem(KEY, deadline);
+    }
+    deadline = parseInt(deadline,10);
+
+    const $timer = document.getElementById('timeleft');
+    const $timerWrap = document.getElementById('timer');
+    const $old = document.getElementById('price-old');
+    const $new = document.getElementById('price-new');
+    const $badge = document.getElementById('badge');
+    const $cta = document.getElementById('cta-btn');
+
+    let expiredSent = !!sessionStorage.getItem('Offer_Expired_ai5_sent');
+    let expiredHandled = false; // <-- защита от повторной вставки блока
+
+    function pad(n){ return n<10?('0'+n):n; }
+
+    function render(){
+      const diff = deadline - Date.now();
+      if(diff <= 0){
+        if (!expiredHandled) {
+          // отправляем событие один раз
           if(!expiredSent){
             fbq('trackCustom','Offer_Expired_ai5');
             sessionStorage.setItem('Offer_Expired_ai5_sent','1');
             expiredSent = true;
           }
-          // заголовок таймера
+          // визуально завершаем акцию
           if($timerWrap){ $timerWrap.innerHTML = '⏰ Акция завершена'; }
 
-          // 🔄 Инверсия цен: показать, что 8,90 € — это старая акционная
-          if($old){
-            $old.style.display='inline';
-            $old.textContent = '8,90 €';     // зачёркнутая старая акция
-          }
-          if($new){
-            $new.textContent = '14,90 €';    // актуальная цена
-          }
+          // 🔄 Инверсия цен
+          if($old){ $old.style.display='inline'; $old.textContent = '8,90 €'; }
+          if($new){ $new.textContent = '14,90 €'; }
           if($badge){
             $badge.style.display='inline';
             $badge.textContent = 'обычная цена';
@@ -300,29 +87,30 @@
             $cta.textContent = BASE_PRICE_LABEL;
           }
 
-          // небольшой «триггер» про промокоды
-          const promo = document.createElement('p');
-          promo.style.marginTop = "10px";
-          promo.style.color = "#444";
-          promo.style.fontSize = "0.95rem";
-          promo.innerHTML = "Но у нас есть 🎟️ <strong>дополнительные промокоды</strong> — попробуйте их на следующем шаге!";
-          if($cta && $cta.parentNode){
+          // один раз добавляем подсказку про промокоды
+          if (!$cta.parentNode.querySelector('#promo-hint')) {
+            const promo = document.createElement('p');
+            promo.id = 'promo-hint';
+            promo.style.marginTop = "10px";
+            promo.style.color = "#444";
+            promo.style.fontSize = "0.95rem";
+            promo.innerHTML = "Но у нас есть 🎟️ <strong>дополнительные промокоды</strong> — попробуйте их на следующем шаге!";
             $cta.parentNode.appendChild(promo);
           }
-          return;
+
+          expiredHandled = true;   // <-- помечаем как обработанное
+          clearInterval(timerId);  // <-- останавливаем тиканье
         }
-        const s = Math.floor(diff/1000);
-        const hh = pad(Math.floor(s/3600));
-        const mm = pad(Math.floor((s%3600)/60));
-        const ss = pad(s%60);
-        if($timer) $timer.textContent = `${hh}:${mm}:${ss}`;
+        return;
       }
+      const s = Math.floor(diff/1000);
+      const hh = pad(Math.floor(s/3600));
+      const mm = pad(Math.floor((s%3600)/60));
+      const ss = pad(s%60);
+      if($timer) $timer.textContent = `${hh}:${mm}:${ss}`;
+    }
 
-      if(sessionStorage.getItem('Offer_Expired_ai5_sent')) expiredSent = true;
-
-      render();
-      setInterval(render, 1000);
-    })();
-  </script>
-</body>
-</html>
+    render();
+    const timerId = setInterval(render, 1000);
+  })();
+</script>
