--- a/index.html
+++ b/index.html
@@ -1,116 +1,210 @@
-<script>
-  // --- 7s ViewContent marker ---
-  setTimeout(function(){
-    fbq('trackCustom','ViewContent_ai5_7s');
-  },7000);
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GPT в деле: мини-курс</title>
 
-  // --- Video helpers ---
-  window.addEventListener('load', function () {
-    const video = document.getElementById('course-video');
-    const btn = document.getElementById('unmute-btn');
+  <!-- Facebook Pixel -->
+  <script>
+    !function(f,b,e,v,n,t,s){
+      if(f.fbq)return;n=f.fbq=function(){n.callMethod ?
+      n.callMethod.apply(n,arguments) : n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)
+    }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-    setTimeout(function(){ if(btn) btn.style.display='block'; },3000);
+    fbq('init', '3153750001397422');
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+         src="https://www.facebook.com/tr?id=3153750001397422&ev=PageView&noscript=1" />
+  </noscript>
+  <!-- End Facebook Pixel -->
 
-    setTimeout(function(){
-      if (video && video.paused) {
-        const p = video.play();
-        if (p && p.catch) p.catch(()=>{});
-      }
-      if (video) {
-        video.addEventListener('volumechange', function () {
-          if (!video.muted && btn) btn.style.display = 'none';
-        });
-      }
-    },6000);
-  });
-
-  function unmuteVideo(){
-    const v=document.getElementById('course-video');
-    const b=document.getElementById('unmute-btn');
-    if(!v) return;
-    v.muted=false; v.play();
-    if(b) b.style.display='none';
-  }
-
-  // --- Countdown (48h per user) ---
-  (function(){
-    const KEY='ai5_offer_deadline_v1';
-    const HOURS=48; // длительность акции для пользователя
-    const ALT_LINK_AFTER_EXPIRY = "https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08"; // линк на 14,90 €
-    const BASE_PRICE_LABEL = 'Получить доступ за 14,90 €';
-
-    const now = Date.now();
-    let deadline = localStorage.getItem(KEY);
-    if(!deadline){
-      deadline = (now + HOURS*60*60*1000).toString();
-      localStorage.setItem(KEY, deadline);
+  <style>
+    :root{
+      --blue:#3aa0d1;
+      --blue-dark:#2a8ab7;
+      --bg:#f4f4f4;
+      --text:#222;
     }
-    deadline = parseInt(deadline,10);
+    *{box-sizing:border-box}
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+    .container {
+      max-width: 720px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.08);
+    }
+    h1 { font-size: 1.8rem; margin-bottom: 0.5em; }
+    .subtitle { font-size: 1.1rem; color: #555; margin-bottom: 1.5em; }
+    .video-wrapper { margin: 20px 0; text-align: center; position: relative; }
+    video { width: 100%; height: auto; border-radius: 12px; }
+    #unmute-btn {
+      position: absolute; bottom: 20px; right: 20px; z-index: 10;
+      background: rgba(0,0,0,0.7); color: #fff; border: none; border-radius: 6px;
+      padding: 10px 14px; font-size: 0.9rem; cursor: pointer; display: none;
+    }
+    ul { padding-left: 1.2em; }
+    li { margin-bottom: 0.7em; }
 
-    const $timer = document.getElementById('timeleft');
-    const $timerWrap = document.getElementById('timer');
-    const $old = document.getElementById('price-old');
-    const $new = document.getElementById('price-new');
-    const $badge = document.getElementById('badge');
-    const $cta = document.getElementById('cta-btn');
+    .offer{ margin-top:24px; background:#e7f7ff; border:1px solid #d1eefc;
+      border-radius:12px; padding:18px; display:flex; align-items:center;
+      gap:18px; flex-wrap:wrap; }
+    .price{ display:flex; align-items:baseline; gap:10px; }
+    .price-old{ color:#888; text-decoration:line-through; font-size:1.1rem; }
+    .price-new{ color:#0b6ea8; font-weight:700; font-size:1.6rem;
+      background:#ffffffb3; padding:4px 10px; border-radius:8px; }
+    .badge{ background:#0bbf77; color:#fff; font-weight:600; padding:4px 10px;
+      border-radius:999px; font-size:0.9rem; }
+    .timer{ margin-left:auto; font-variant-numeric:tabular-nums; font-weight:700;
+      color:#0b6ea8; display:flex; align-items:center; gap:8px; }
+    .timer small{display:block;color:#2f6f8e;font-weight:500}
+    .cta { margin-top: 18px; text-align: center; }
+    .cta a {
+      background: var(--blue); color: #fff; text-decoration: none;
+      padding: 14px 28px; border-radius: 8px; font-size: 1rem;
+      display: inline-block; transition: background .3s, transform .05s;
+    }
+    .cta a:hover { background: var(--blue-dark); }
+    .cta a:active { transform: translateY(1px); }
 
-    let expiredSent = !!sessionStorage.getItem('Offer_Expired_ai5_sent');
-    let expiredHandled = false; // <-- защита от повторной вставки блока
+    .bonus {
+      background: #eefbf4; border-left: 4px solid #0bbf77; padding: 16px;
+      margin-top: 1.5em; border-radius: 12px;
+    }
+    .promo-hint {
+      margin-top:16px; font-size:0.95rem; color:#444; text-align:center;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>GPT в деле: как запустить ИИ-ассистента и заработать на нём</h1>
+    <div class="subtitle">
+      Мини-курс для тех, кто хочет меньше рутинить, больше зарабатывать — и начать применять ИИ в своём бизнесе уже завтра.
+    </div>
 
-    function pad(n){ return n<10?('0'+n):n; }
+    <div class="video-wrapper">
+      <video id="course-video" controls muted playsinline poster="Course%20cover%20pix.png">
+        <source src="AIcourseStart.mp4" type="video/mp4">
+      </video>
+      <button id="unmute-btn" onclick="unmuteVideo()">🔊 Включить звук</button>
+    </div>
 
-    function render(){
-      const diff = deadline - Date.now();
-      if(diff <= 0){
-        if (!expiredHandled) {
-          // отправляем событие один раз
+    <!-- OFFER / PRICE + TIMER -->
+    <div class="offer" id="offer">
+      <div class="price">
+        <span class="price-old" id="price-old">17,00 €</span>
+        <span class="price-new" id="price-new">8,90 €</span>
+        <span class="badge" id="badge">−48%</span>
+      </div>
+      <div class="timer" id="timer">
+        ⏳ <span id="timeleft">48:00:00</span>
+        <small>до конца акции</small>
+      </div>
+    </div>
+
+    <h2>Что вы узнаете:</h2>
+    <ul>
+      <li>⚙️ 5 реальных сценариев применения GPT</li>
+      <li>📄 Готовые промпты для ускорения работы</li>
+      <li>🧠 Метод внедрения GPT без технарщины</li>
+    </ul>
+
+    <div class="bonus">
+      <strong>🎁 Бонусы:</strong>
+      <ul>
+        <li>🧭 Ассистент «Обогатитель» для запуска микробизнеса</li>
+        <li>📥 PDF «5 воронок в законе»</li>
+      </ul>
+    </div>
+
+    <div class="cta">
+      <a id="cta-btn" href="https://buy.stripe.com/14A3cubyk3H17C67Of6Na07" onclick="fbq('trackCustom','Checkout_ai5')">
+        Получить доступ за 8,90&nbsp;€
+      </a>
+    </div>
+
+    <div class="promo-hint" id="promo-hint" style="display:none;">
+      Акция завершена 🎉 Но у нас есть дополнительные <strong>промокоды</strong> — попробуйте ввести <code>GPT-20</code> на следующем шаге.
+    </div>
+  </div>
+
+  <script>
+    // --- 7s ViewContent marker ---
+    setTimeout(function(){
+      fbq('trackCustom','ViewContent_ai5_7s');
+    },7000);
+
+    // --- Video helpers ---
+    window.addEventListener('load', function () {
+      const video = document.getElementById('course-video');
+      const btn = document.getElementById('unmute-btn');
+      setTimeout(()=>{ if(btn) btn.style.display='block'; },3000);
+      setTimeout(()=>{
+        if (video && video.paused) { video.play().catch(()=>{}); }
+        if (video) {
+          video.addEventListener('volumechange', ()=>{ if (!video.muted && btn) btn.style.display='none'; });
+        }
+      },6000);
+    });
+    function unmuteVideo(){ const v=document.getElementById('course-video'); const b=document.getElementById('unmute-btn'); if(v){v.muted=false; v.play();} if(b) b.style.display='none'; }
+
+    // --- Countdown ---
+    (function(){
+      const KEY='ai5_offer_deadline_v1';
+      const HOURS=48;
+      const now = Date.now();
+      let deadline = localStorage.getItem(KEY);
+      if(!deadline){ deadline = (now + HOURS*60*60*1000).toString(); localStorage.setItem(KEY, deadline); }
+      deadline = parseInt(deadline,10);
+
+      const $timer=document.getElementById('timeleft');
+      const $timerWrap=document.getElementById('timer');
+      const $old=document.getElementById('price-old');
+      const $new=document.getElementById('price-new');
+      const $badge=document.getElementById('badge');
+      const $cta=document.getElementById('cta-btn');
+      const $hint=document.getElementById('promo-hint');
+
+      let expiredSent=false;
+      function pad(n){return n<10?('0'+n):n;}
+      function render(){
+        const diff=deadline-Date.now();
+        if(diff<=0){
           if(!expiredSent){
             fbq('trackCustom','Offer_Expired_ai5');
-            sessionStorage.setItem('Offer_Expired_ai5_sent','1');
-            expiredSent = true;
+            expiredSent=true;
           }
-          // визуально завершаем акцию
-          if($timerWrap){ $timerWrap.innerHTML = '⏰ Акция завершена'; }
-
-          // 🔄 Инверсия цен
-          if($old){ $old.style.display='inline'; $old.textContent = '8,90 €'; }
-          if($new){ $new.textContent = '14,90 €'; }
-          if($badge){
-            $badge.style.display='inline';
-            $badge.textContent = 'обычная цена';
-            $badge.style.background = '#888';
-          }
-
-          // смена ссылки и текста кнопки
-          if($cta){
-            $cta.href = ALT_LINK_AFTER_EXPIRY || $cta.href;
-            $cta.textContent = BASE_PRICE_LABEL;
-          }
-
-          // один раз добавляем подсказку про промокоды
-          if (!$cta.parentNode.querySelector('#promo-hint')) {
-            const promo = document.createElement('p');
-            promo.id = 'promo-hint';
-            promo.style.marginTop = "10px";
-            promo.style.color = "#444";
-            promo.style.fontSize = "0.95rem";
-            promo.innerHTML = "Но у нас есть 🎟️ <strong>дополнительные промокоды</strong> — попробуйте их на следующем шаге!";
-            $cta.parentNode.appendChild(promo);
-          }
-
-          expiredHandled = true;   // <-- помечаем как обработанное
-          clearInterval(timerId);  // <-- останавливаем тиканье
+          if($timerWrap) $timerWrap.innerHTML='⏰ Акция завершена';
+          if($old) {$old.style.display='inline'; $old.textContent='8,90 €';}
+          if($new) {$new.textContent='14,90 €';}
+          if($badge) $badge.style.display='none';
+          if($cta){ $cta.href='https://buy.stripe.com/bJe8wO0TG4L57C67Of6Na08'; $cta.textContent='Получить доступ за 14,90 €'; }
+          if($hint) $hint.style.display='block';
+          return;
         }
-        return;
+        const s=Math.floor(diff/1000);
+        const hh=pad(Math.floor(s/3600));
+        const mm=pad(Math.floor((s%3600)/60));
+        const ss=pad(s%60);
+        if($timer) $timer.textContent=`${hh}:${mm}:${ss}`;
       }
-      const s = Math.floor(diff/1000);
-      const hh = pad(Math.floor(s/3600));
-      const mm = pad(Math.floor((s%3600)/60));
-      const ss = pad(s%60);
-      if($timer) $timer.textContent = `${hh}:${mm}:${ss}`;
-    }
-
-    render();
-    const timerId = setInterval(render, 1000);
-  })();
-</script>
+      render(); setInterval(render,1000);
+    })();
+  </script>
+</body>
+</html>
